# KA-OpenMP-Proiektua

./: .gitignore  CMakeLists.txt  Dokumentazioa.md  README.md  definetg.h  emaitzak.out  emaitzak1000.out  funtg.h  funtg_s.c  taldegen_s.c
doc/: Dokumentazioa.md  Dokumentazioa2.md
dokumentazioa/: doc.md
